# quant0702

./: .gitignore  README.md  cloud  cloud.wal  definitions.py  pyproject.toml  requirements.txt  workspace.yaml  workspace.yml
.dg/: telemetry.yaml
.github/workflows/: deploy.yml
.tmp_dagster_home_9t9l5eno/storage/: Refresh_Stock_List
.tmp_dagster_home_abcllmsz/storage/: First_Stock_List
.tmp_dagster_home_fmqshrmy/storage/: Add_Listing_Stocks  First_Stock_List
.tmp_dagster_home_h5bm7zdw/storage/: Add_Delisting_Stocks  Add_Details_Xq  Add_Listing_Stocks  Daily_Active_Stocks  Daily_Active_Stocks_Mainboard  Daily_New_Stocks  First_Stock_List
.tmp_dagster_home_jsoin435/storage/: Add_Details_Xq  Add_Listing_Stocks  Start_Stock_List
.tmp_dagster_home_mfvan4o_/storage/: Add_Details_Xq  Add_Listing_Stocks  Start_Stock_List
github/workflows/: deploy.yml
resources/: duckdb_io.py  parquet_io.py  tushare_io.py
scripts/: manage.sh
src/: __init__.py
src/basic/: __init__.py  jobs.py  schedules.py
src/basic/assets/: assets.py  backtest.py  factor_calculation.py
src/data_ingestion/: __init__.py  config.py  jobs.py  schedules.py
src/data_ingestion/assets/: assets.py
src/domain/: __init__.py
src/domain/factor_analysis/: __init__.py  evaluation.py  io.py  preprocess.py  standardization.py
src/domain/factor_catalog/: __init__.py  legacy_registry_snapshot.py  registry.py
src/factor/: __init__.py  jobs.py  schedules.py
src/orchestration/: __init__.py
src/shared/: cal_day_length.py  env_api.py  read_past_date.py  read_trade_cal.py  validate_source_dates.py
(+626 files in other folders)
