[project]
name = "a_stock"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "adata>=2.9.5",
    "akshare>=1.18.25",
    "dagster==1.12.14",
    "duckdb>=1.4.4",
    "numpy>=2.2.6",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "tushare>=1.4.24",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "duckdb",
    "polars",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "src"
registry_modules = [
    "src.components.*",
]
